fix overflow modal-window

--- a/css/main.css
+++ b/css/main.css
@@ -851,6 +851,7 @@ address {
   z-index: 5;
   width: 100%;
   height: 100%;
+  overflow: auto;
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.2);
@@ -875,7 +876,6 @@ address {
   width: 100%;
   max-width: 450px;
   height: 609px;
-  overflow-x: auto;
   left: 50%;
   top: 50%;
   background: #ffffff;
