--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -3,6 +3,7 @@
   z-index: 5;
   width: 100%;
   height: 100%;
+  overflow: auto;
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.2);
