--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -4,7 +4,6 @@
   width: 100%;
   max-width: 450px;
   height: 609px;
-  overflow-x: auto;
   @media screen and (min-width: 768px) {
     // width: 528px;
     max-width: 528px;
@@ -26,7 +25,6 @@
     transform: translate(-50%) scale(1);
   }
   @media screen and (max-width: 479px) {
-    
   }
 
   transition: transform var(--animation-duration)
@@ -159,7 +157,7 @@
     @include font(14px, 400, 24px);
   }
   @media screen and (max-width: 479px) {
-    font-size: calc( (100vw - 100px)/(480 - 100) * (11 - 2) + 2px);
+    font-size: calc((100vw - 100px) / (480 - 100) * (11 - 2) + 2px);
   }
   letter-spacing: 0.03em;
   color: var(--secondary-text-color-theme-light);
